修改商品导入BUG，修改首页链接

--- a/web/src/main/resources/templates/information/informations.html
+++ b/web/src/main/resources/templates/information/informations.html
@@ -10,9 +10,7 @@
   <script  th:src="@{/js/script.js}"></script>
 </head>
 <body>
-	<div>
-		<div th:include="head/head :: head">Head</div>
-	</div>
+	<div th:include="head/head">Head</div>
 	<!-- header -->
 	<div class="wrapper">
 		<div class="crumb news-crumb">
