--- a/web/src/main/resources/templates/head/head.html
+++ b/web/src/main/resources/templates/head/head.html
@@ -139,16 +139,16 @@
 			</ul>
 			<ul th:unless="${pc!=null}">
 				<li>
-					<a href="/productCategory/仪器">仪器</a>
+					<a href="/productCategory/1">仪器</a>
 				</li>
 				<li>
-					<a href="/productCategory/试剂">试剂</a>
+					<a href="/productCategory/2">试剂</a>
 				</li>
 				<li>
-					<a href="/productCategory/耗材">耗材</a>
+					<a href="/productCategory/2">耗材</a>
 				</li>
 				<li>
-					<a href="/productCategory/服务">服务</a>
+					<a href="/productCategory/3">服务</a>
 				</li>
 				<li>
 					<a href="/subjects">专题</a>
