--- a/web/src/main/resources/templates/information/information.html
+++ b/web/src/main/resources/templates/information/information.html
@@ -23,9 +23,7 @@
 </script>
 </head>
 <body>
-	<div>
-		<div th:include="head/head :: head">Head</div>
-	</div>
+	<div th:include="head/head">Head</div>
 	<!-- header -->
 	<div class="wrapper">
 		<div class="crumb news-crumb">
