--- a/web/src/main/resources/templates/user/common/signup.html
+++ b/web/src/main/resources/templates/user/common/signup.html
@@ -63,6 +63,7 @@
 			<div class="form-group">
 				<label><i>*</i>密码</label>
 				<input type="password" th:field="*{password}"/>
+				<i class="error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">必填</i>
 			</div>
 			<div class="form-group">
 				<label><i>*</i>手机号</label>
@@ -102,10 +103,12 @@
 			<div class="form-group">
 				<label><i>*</i>部门</label>
 				<input type="text" th:field="*{department}"/>
+				<i class="error" th:if="${#fields.hasErrors('department')}" th:errors="*{department}">必填</i>
 			</div>
 			<div class="form-group">
 				<label><i>*</i>职务</label>
-				<input type="text" />
+				<input type="text" th:field="*{position}"/>
+				<i class="error" th:if="${#fields.hasErrors('position')}" th:errors="*{position}">必填</i>
 			</div>
 			<div class="form-group">
 				<label><i>*</i>企业电话</label>
