provider role show bug&search labe

--- a/admin/src/main/resources/templates/user/provider.html
+++ b/admin/src/main/resources/templates/user/provider.html
@@ -3,8 +3,8 @@
         <div class="form-group company-select">
             <select ng-model="auth" name="state">
                 <option value="">请选择</option>
-                <option value="ROLE_PROVIDER">货主</option>
-                <option value="ROLE_UNAUTH">司机</option>
+                <option value="ROLE_PROVIDER">已审核</option>
+                <option value="ROLE_UNAUTH">未审核</option>
             </select>
             <button ng-click="search()" class="btn btn-primary btn-sm">搜索</button>
         </div>
@@ -32,7 +32,7 @@
                 <td>{{item.email}}</td>
                 <td>{{item.city}}</td>
                 <td>{{item.company}}</td>
-                <td>{{item.state}}</td>
+                <td>{{item.state|roleFilter}}</td>
                 <td>{{item.createTime}}</td>
             </tr>
         </tbody>
