--- a/admin/src/main/resources/templates/login.html
+++ b/admin/src/main/resources/templates/login.html
@@ -7,10 +7,12 @@
         <script type="text/javascript" src="/js/bootstrap.min.js"></script>
 	</head>
 	<body>
-		<form  th:method="post" th:object="${user}">
-			<input type="text" th:field = "*{name}"/>
-			<input type="password" th:field = "*{password}" />
-			<input type="submit"/>
+	<div style="border: 1px solid black; width: 300px;height:100px;margin-left: auto;margin-right: auto;">
+		<form  th:method="post" th:object="${user}" style="text-align: center;padding-top: 10px;">
+			用户名：<input type="text" th:field = "*{name}"/><br/>
+			密&nbsp;&nbsp;码：<input type="password" th:field = "*{password}" /><br/>
+			<input type="submit" value="登录"/>
 		</form>
+		</div>
 	</body>
 </html>
