--- a/web/src/main/resources/templates/fragments/page.html
+++ b/web/src/main/resources/templates/fragments/page.html
@@ -8,7 +8,7 @@
 		<div th:fragment="page(viewpage)">
 			<ul th:each="i:${#numbers.sequence(viewpage.begin,viewpage.end)}">
 				<li th:class="${i}==viewpage.current?activate" >
-					<a th:href="@{${viewpage.href}(pages=${i},size=15,__${viewpage.option}__)}" th:text="${i}"></a>
+					<a th:href="@{${viewpage.href}(page=${i},size=15,__${viewpage.option}__)}" th:text="${i}"></a>
 				</li>
 			</ul>
 		</div>
