--- a/web/src/main/resources/templates/head/head.html
+++ b/web/src/main/resources/templates/head/head.html
@@ -52,6 +52,7 @@
 				</div>
 			</div>
 			<div class="head-user hide-menu">
+				<script type="text/javascript" th:src="@{/js/logout.js}"></script>
 				<div class="user-name" id="username"  th:text="${session.SPRING_SECURITY_CONTEXT.authentication.principal.username}"></div>
 				<div class="user-menu show-menu bodr">
 					<ul>
@@ -80,7 +81,7 @@
 							<a href="/provider/count">商品信息统计</a>
 						</li>
 						<li>
-							<a>退出登录</a>
+							<a type="button" id="logout">退出登录</a>
 						</li>
 					</ul>
 				</div>
