--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -104,6 +104,7 @@
 									</ul>
 								</div>
 								<div class="fr list-mode">
+									<div style="float: right;padding-right: 10px; padding-top: 10px;" ><a href="/productCategory/1" class="more blue">more>></a></div>
 									<ul>
 									<li th:each="productCategory,categoryStat:${yqs}" th:unless="${categoryStat.index lt 5}"><a th:href="@{'/products/_search?secondCategory='+${productCategory.id}}"><label th:text="${productCategory.name}"></label></a>
 											<div>
@@ -111,6 +112,7 @@
 											</div></li>
 									</ul>
 								</div>
+								
 							</div>
 							<div class="tab-panel products-detail hide">
 								<div class="fl list-mode">
@@ -124,6 +126,7 @@
 									</ul>
 								</div>
 								<div class="fr list-mode">
+								<div style="float: right;padding-right: 10px; padding-top: 10px;" ><a href="/productCategory/2" class="more blue">more>></a></div>
 									<ul>
 										<li th:each="productCategory,categoryStat:${sjs}"  th:unless="${categoryStat.index lt 4}"><label
 											th:text="${productCategory.name}"></label>
@@ -145,6 +148,7 @@
 									</ul>
 								</div>
 								<div class="fr list-mode">
+								<div style="float: right;padding-right: 10px; padding-top: 10px;" ><a href="/productCategory/3" class="more blue">more>></a></div>
 									<ul>
 										<li th:each="productCategory,categoryStat:${hcs}" th:unless="${categoryStat.index lt 6}">
 										<label th:text="${productCategory.name}"></label>
@@ -165,6 +169,7 @@
 									</ul>
 								</div>
 								<div class="fr list-mode">
+								<div style="float: right;padding-right: 10px; padding-top: 10px;" ><a href="/productCategory/4" class="more blue">more>></a></div>
 									<ul>
 										<li th:each="productCategory,categoryStat:${fws}" th:unless="${categoryStat.index lt 7}">
 										<label th:text="${productCategory.name}"></label>
@@ -179,8 +184,7 @@
 					<div class="brand fr">
 						<h3>品牌</h3>
 						<div class="brand-box">
-							<img th:each="brand:${brands}" th:src="@{${brand.coverImg}}"
-								th:href="'/brand/'+${brand.id}" />
+							<a th:each="brand:${brands}" th:href="@{'/products/_search?brand='+${brand.name}}"><img th:src="@{${brand.coverImg}}" th:href="'/brand/'+${brand.id}" /></a>
 						</div>
 					</div>
 				</div>
