--- a/web/src/main/resources/templates/information/informations.html
+++ b/web/src/main/resources/templates/information/informations.html
@@ -50,39 +50,13 @@
 		</div>
 		<div class="pagination">
 			<div class="l-pagination">
-				<ul>
-					<li>
-						<a href="">首页</a>
-					</li>
-					<li>
-						<a href="">1</a>
-					</li>
-					<li class="active">
-						<a href="">2</a>
-					</li>
-					<li>
-						<a href="">3</a>
-					</li>
-					<li>
-						<a href="">4</a>
-					</li>
-					<li>……</li>
-					<li>
-						<a href="">40</a>
-					</li>
-					<li>
-						<a href="">尾页</a>
-					</li>
-				</ul>
-				<div class="page-total">
-					共40页
-				</div>
-				<div class="page-from">
-					<span>到第</span>
-					<input type="text" class="page-input" />
-					<span>页</span>
-					<button>确定</button>
-				</div>
+					<ul>
+						<li><a th:href="@{${viewpage.href}(page=1,size=12}">首页</a></li>
+						<li th:each="i:${#numbers.sequence(viewpage.begin,viewpage.end)}" th:class="${i==viewpage.current}?active" >
+							<a th:href="@{${viewpage.href}(page=${i},size=12}" th:text="${i}"></a>
+						</li>
+						<li><a th:href="@{${viewpage.href}(page=${viewpage.end},size=12}">末页</a></li>
+					</ul>
 			</div>
 		</div>
 	</div>
