--- a/web/src/main/resources/templates/product/product.html
+++ b/web/src/main/resources/templates/product/product.html
@@ -246,7 +246,15 @@
 						</ul>
 					</div>
 					<div class="pagination">
-						
+						<div class="l-pagination">
+						<ul>
+							<li><a th:href="@{${viewpage.href}(page=1,size=12,__${viewpage.option}__)}">首页</a></li>
+							<li th:each="i:${#numbers.sequence(viewpage.begin,viewpage.end)}" th:class="${i==viewpage.current}?active" >
+								<a th:href="@{${viewpage.href}(page=${i},size=12,__${viewpage.option}__)}" th:text="${i}"></a>
+							</li>
+							<li><a th:href="@{${viewpage.href}(page=${viewpage.end},size=12,__${viewpage.option}__)}">末页</a></li>
+						</ul>
+						</div>
 					</div>
 				</div>
 			</div>
