--- a/admin/src/main/resources/templates/subject/subjects.html
+++ b/admin/src/main/resources/templates/subject/subjects.html
@@ -11,6 +11,7 @@
                 <th>序号</th>
                 <th>名称</th>
                 <th>图片</th>
+                <th>更新日期</th>
             </tr>
         </thead>
         <tbody>
@@ -18,6 +19,7 @@
                 <td><a href="#/subjectDetail/{{item.id}}">{{$index+1}}</a></td>
                 <td>{{item.name}}</td>
                 <td><img ng-src="{{item.cover}}" width="100" height="100"></img></td>
+                <td>{{item.updatedTime|date:'yyyy-MM-dd HH:mm:ss'}}</td>
             </tr>
         </tbody>
     </table>
