--- a/web/src/main/resources/templates/fragments/page.html
+++ b/web/src/main/resources/templates/fragments/page.html
@@ -7,8 +7,8 @@
 	<body>
 		<div th:fragment="page(viewpage)">
 			<ul th:each="i:${#numbers.sequence(viewpage.begin,viewpage.end)}">
-				<li th:class="${i}==viewpage.current?activate" >
-					<a th:href="@{${viewpage.href}(page=${i},size=15,__${viewpage.option}__)}" th:text="${i}"></a>
+				<li th:class="${i-1==viewpage.current}?active">
+					<a th:href="@{${viewpage.href}(page=${i-1},size=12,__${viewpage.option}__,brand=${option.brand},title=${option.title})}" th:text="${i}"></a>
 				</li>
 			</ul>
 		</div>
