--- a/web/src/main/resources/templates/head/headCart.html
+++ b/web/src/main/resources/templates/head/headCart.html
@@ -52,12 +52,10 @@
 				</div>
 			</div>
 			<div class="head-user">
+				<script type="text/javascript" th:src="@{/js/logout.js}"></script>
 				<div class="user-name" id="username"  th:text="${session.SPRING_SECURITY_CONTEXT.authentication.principal.username}"></div>
 				<div class="user-menu bodr">
 					<ul>
-						<li th:unless="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_COMMONUSER">
-							<a href="/supplier/detail">个人中心</a>
-						</li>
 						<li th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_COMMONUSER">
 							<a href="/user/detail">个人中心</a>
 						</li>
@@ -70,17 +68,11 @@
 						<li th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_COMMONUSER">
 							<a href="/user/buyRecords">我的采购申请</a>
 						</li>
-						<li th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_PROVIDER">
-							<a href="/provider/products?form">商品发布</a>
-						</li>
-						<li th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_PROVIDER">
-							<a href="/provider/products">商品维护</a>
-						</li>
-						<li th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_PROVIDER">
-							<a href="/provider/count">商品信息统计</a>
-						</li>
 						<li>
-							<a>退出登录</a>
+							<form id="logoutForm" action="/logout" method="post">
+							 	<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+								<a id="logout">退出登录</a>
+							</form>
 						</li>
 					</ul>
 				</div>
