--- a/web/src/main/resources/templates/user/common/detail.html
+++ b/web/src/main/resources/templates/user/common/detail.html
@@ -75,28 +75,33 @@
 								</div>
 								<div class="form-group">
 									<div class="fl">
-										<label>部门</label> 
+										<label><i>*</i>部门</label> 
 										<input type="text" th:field="*{department}" />
 										<i class="error" th:if="${#fields.hasErrors('department')}" th:errors="*{department}"></i>
 									</div>
+									<div class="fl">
+										<label><i>*</i>职务</label> 
+										<input type="text" th:field="*{position}" />
+										<i class="error" th:if="${#fields.hasErrors('position')}" th:errors="*{position}"></i>
+									</div>
+								</div>
+								<div class="form-group">
 									<div class="fl">
 										<label><i>*</i>电话</label> 
 										<input type="text" th:field="*{companyPhone}" />
 										<i class="error" th:if="${#fields.hasErrors('companyPhone')}" th:errors="*{companyPhone}"></i>
 									</div>
-								</div>
-								<div class="form-group">
 									<div class="fl">
 										<label>传真</label> <input type="text" th:field="*{fax}" />
 										<i class="error" th:if="${#fields.hasErrors('fax')}" th:errors="*{fax}"></i>
 									</div>
+								</div>
+								<div class="form-group">
 									<div class="fl">
 										<label><i>*</i>邮政编码</label> 
 										<input type="text" th:field="*{code}" />
 										<i class="error" th:if="${#fields.hasErrors('code')}" th:errors="*{code}"></i>
 									</div>
-								</div>
-								<div class="form-group">
 									<div class="fl">
 										<label><i>*</i>省/市</label> 
 										<select class="w115" th:field="*{province}">
@@ -109,6 +114,8 @@
 										</select>
 										<i class="error" th:if="${#fields.hasErrors('city')}" th:errors="*{city}"></i>
 									</div>
+								</div>
+								<div class="form-group">
 									<div class="fl">
 										<label><i>*</i>详细地址</label> 
 										<input type="text" th:field="*{address}" />
