--- a/web/src/main/resources/templates/subject/subjects.html
+++ b/web/src/main/resources/templates/subject/subjects.html
@@ -33,7 +33,7 @@
 		    <ul>
 		    	 <li th:each="subject:${subjects}">
 					<a th:href="@{'/subjects/'+${subject.id}}">
-						<div class="title ft16" th:text="${subject.name}">生物芯片扫描仪</div>
+						<div class="title ft16 text210" th:text="${subject.name}">生物芯片扫描仪</div>
 						<div class="spe-pic">
 							<img th:src="@{${subject.image}}" width="210" height="175"/>
 						</div>
