--- a/web/src/main/resources/templates/search/subject/subjects.html
+++ b/web/src/main/resources/templates/search/subject/subjects.html
@@ -4,205 +4,52 @@
 		<meta charset="UTF-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<meta name="description" content=""/>
-		<title>仪器商品列表</title>
+		<title>检测应用</title>
+		<link rel="stylesheet" type="text/css" th:href="@{/css/global.css}"/>
 		<meta name="_csrf" th:content="${_csrf.token}" />
 		<meta name="_csrf_header" th:content="${_csrf.headerName}" />
-		<link type="text/css" rel="stylesheet" th:href="@{/css/global.css}"/>
-		<script type="text/javascript" th:src="@{/js/jquery-min.js}"></script>
-		<script type="text/javascript" th:src="@{/js/script.js}"></script>
-		<script type="text/javascript" th:src="@{/js/ajaxLogin-collection-products.js}"></script>
-		<script type="text/javascript" th:src="@{/js/ajaxLogin-cart-products.js}"></script>
-		<script type="text/javascript" th:src="@{/js/searchBrandContraction.js}"></script>
-		<script th:src="@{/js/searchForm.js}"></script>
+		<script type="text/javascript" th:src="@{/js/jquery-1.11.2.min.js}"></script>
+		<script th:src="@{/js/jquery-min.js}"></script>
+		<script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
+		<script th:src="@{/js/silderBox.js}"></script>
+		<script th:src="@{/js/script.js}"></script>
 		<script type="text/javascript">
             $(function() {
                 var token = $("meta[name='_csrf']").attr("content");
                 var header = $("meta[name='_csrf_header']").attr("content");
+                var id = $("meta[name='id']").attr("content");
+
                 $(document).ajaxSend(function(e, xhr, options) {
                     xhr.setRequestHeader(header, token);
-                });
-                $('.addCart').loginBeforeAjaxCart({
-                	url : '/ajax/carts',
-                	data : {
-                		'productId' : $(this).attr("data-id"),
-   	                 	'number' : "1"
-   	                 },
-                	type : 'post',
-                	dataType : 'json',
-                	success : function(data){
-    	                 $('#includeHeader').load('/head');
-                		if (data.data == "no authority") {
-    	                 	alert("对不起您没有权限");
-    	                 }
-                	},
-                	error : function(data){
-                		alert("系统异常");
-                	}
-                });
-              	$('.coll').loginBeforeAjaxCollection({
-              		url : '/ajax/preferProduct',
-              		data : {'id' : $(this).attr("data-id")},
-              		type : 'post',
-              		success:function(data){
-              			console.log(data);
-              			 $('#includeHeader').load('/head');
-              			if(data=="no authority")
-              				alert("对不起您没有权限");
-              			else if(data=="duplicate")
-              				alert("该商品已被您收藏");
-              			else if(data == "success")
-              				alert("添加收藏成功");
-              		},
-              		error:function(data){
-              			alert("系统异常");
-              		}
-              	});
-
-                $(".product").on("click", ".coll", function() {
-                    var obj = $(this);
-                    var productId = obj.attr("data-id");
-                    coll(productId);
-                });
-                $(".product").on("click", ".nocoll", function() {
-                    var obj = $(this);
-                    var productId = obj.attr("data-id");
-                    nocoll(productId);
-                });
-
-                $('input[type="radio"]').click(function() {
-                    $('form').submit();
-                });
-
-                $(':checked').each(function(n, target) {
-                    var source = $(target);
-                    var template = $('<a class="sel-tag"/>');
-                    template.text(source.attr('data-label') + "：" + source.siblings('label').text());
-                    template.append('<span class="icon-del" data-target="' + source.attr('id') + '"></span>');
-                    $('div.selected').append(template);
-                });
-
-                $('a.sel-tag span').click(function(event) {
-                    var source = $(event.target);
-                    $('#' + source.attr('data-target')).prop('checked', false);
-                    $('form').submit();
-                });
-
-                $('#tagSearch').click(function() {
-                    $('form').submit();
                 });
             });
 		</script>
 	</head>
 	<body>
-		<div id="includeHeader" class="header" th:include="head/head">
+		<div th:include="head/head">
 			Head
 		</div>
 		<!-- header -->
 		<div class="wrapper">
-			<div class="gray-hd">
-				<span>筛选商品 共<i th:text="${products.totalElements}">1222</i>件商品</span>
-			</div>
-			<div class="sort-group">
-				<div class="selected">
-					<label><b>筛选：</b></label>
-				</div>
-				<form th:object="${option}">
-					<div id="brandSearch" class="search-select" style="height: 40px;">
-						<label><b>品牌：</b></label>
-						<ul class="list-inline">
-							<li th:each="brand : ${brands}">
-								<input type="radio" th:field="*{brand}" th:value="${brand.name}" th:attr="data-label='品牌'"/>
-								<label th:for="${#ids.prev('brand')}" th:text="${brand.name}">Heating</label>
-							</li>
-						</ul>
-						<div id="more" style="right: 20px;bottom: 5px;position: absolute;"><a type="button" class="blue">↓</a></div>
-						<div id="contraction" style="right: 20px;bottom: 10px;position: absolute; display: none;"><a class="blue" type="button">↑</a></div>
-					</div>
-					<div class="search-select">
-						<label><b>产地：</b></label>
-						<ul class="list-inline pack">
-							<li>
-								<input type="radio" th:field="*{original}" value="1" data-label="产地"/>
-								<label for="original1">进口</label>
-							</li>
-							<li>
-								<input th:field="*{original}" type="radio" value="0" data-label="产地"/>
-								<label for="original2">中国</label>
-							</li>
-						</ul>
-					</div>
-					<div class="search-select">
-						<label><b>价格：</b></label>
-						<ul class="list-inline pack">
-							<li>
-								<input th:field="*{priceRange}" type="radio" name="radio" data-label="价格" value="1"/>
-								<label for="priceRange1">1-3万</label>
-							</li>
-							<li>
-								<input th:field="*{priceRange}" type="radio" name="radio" data-label="价格" value="2"/>
-								<label for="priceRange2">3-5万</label>
-							</li>
-							<li>
-								<input th:field="*{priceRange}" type="radio" name="radio" data-label="价格" value="3"/>
-								<label for="priceRange3">5-8万</label>
-							</li>
-						</ul>
-						<input type="hidden" th:field="*{secondCategory}"/>
-						<input type="hidden" th:field="*{title}"/>
-					</div>
-					<div class="items-search">
-						<label><b>标签：</b></label>
-						<input type="text" class="bodr" th:field="*{tag}"/>
-						<button id="tagSearch">
-							搜索
-						</button>
-					</div>
-				</form>
-			</div>
-			<div class="filter">
-				<a class="price">价格<i></i></a>
-				<a>评论数</a>
-				<a>上架时间</a>
-			</div>
-			<div class="items-list pro-list">
+			<div class="global-box topic-box">
 				<ul>
-					<li class="bodr product" th:each="product:${products.content}" >
-						<a th:href="@{'/products/'+${product.id}}"> <img th:src="@{${product.imgurl}}" width="210" height="175"/> </a>
-						<div class="pic-box">
-							<div class="pic-row refer">
-								<label>参考报价</label>
-								<span> <b class="red ft14">￥<i th:text="${product.price}"></i></b> </span>
-							</div>
-							<div class="pic-row tit" th:text="${product.title}"></div>
-							<div class="pic-row">
-								<label>品牌：</label>
-								<span th:text="${product.brand}"></span>
-							</div>
-							<div class="pic-row">
-								<label >产地：</label>
-								<span th:text="${product.original}"></span>
-							</div>
-							<div class="pic-row">
-								<label>型号：</label>
-								<span th:text="${product.model}"></span>
-							</div>
-							<div class="pic-row bodr" th:id="'coll'+${product.id}">
-								<a class="btn-cancel coll" th:attr="data-id=${product.id}">加入收藏</a>
-								<a class="btn-cart addCart" th:attr="data-id=${product.id}">加入购物车</a>
-							</div>
+					<li th:each="subject:${subjects}">
+						<div class="title ft16" th:text="${subject.title}">
+							生物芯片扫描仪
 						</div>
+						<div class="spe-pic">
+						<a th:href="@{'/subjects/'+${subject.id}}">
+							<img th:src="@{${subject.image}}" width="210" height="175"/>
+						</a>
+						</div> <div class="topic-detail dd" draggable="false" th:text="${subject.summary}"></div>
 					</li>
 				</ul>
 			</div>
-		<div class="pagination">
-			<div th:include="fragments/page::page(${viewpage})" class="l-pagination"></div>
-		</div>
-			
+			<div class="pagination">
+			</div>
 		</div>
 		<div class="footer">
 			© 1998 - 2015 SJ Inc. All Rights Reserved
 		</div>
-		<div class="fixed"></div>
-		<div class="hide-wrap logo-small bodr"></div>
 	</body>
 </html>
