--- a/web/src/main/resources/templates/search/subject/subjects.html
+++ b/web/src/main/resources/templates/search/subject/subjects.html
@@ -22,6 +22,23 @@
                 $(document).ajaxSend(function(e, xhr, options) {
                     xhr.setRequestHeader(header, token);
                 });
+                $('input[type="radio"]').click(function() {
+                    $('form').submit();
+                });
+
+                $(':checked').each(function(n, target) {
+                    var source = $(target);
+                    var template = $('<a class="sel-tag"/>');
+                    template.text(source.attr('data-label') + "：" + source.siblings('label').text());
+                    template.append('<span class="icon-del" data-target="' + source.attr('id') + '"></span>');
+                    $('div.selected').append(template);
+                });
+
+                $('a.sel-tag span').click(function(event) {
+                    var source = $(event.target);
+                    $('#' + source.attr('data-target')).prop('checked', false);
+                    $('form').submit();
+                });
             });
 		</script>
 	</head>
@@ -31,6 +48,24 @@
 		</div>
 		<!-- header -->
 		<div class="wrapper">
+			<div class="sort-group">
+				<div class="selected">
+					<label><b>筛选：</b></label>
+				</div>
+				<form th:object="${option}">
+					<div id="brandSearch" class="search-select" style="height: 40px;">
+						<label><b>分类：</b></label>
+						<ul class="list-inline">
+							<li th:each="category : ${categories}">
+								<input type="radio" th:field="*{category}" th:value="${category.name}" th:attr="data-label='品牌'"/>
+								<label th:for="${#ids.prev('category')}" th:text="${category.name}">Heating</label>
+							</li>
+						</ul>
+					</div>
+				</form>
+			</div>
+		</div>
+		<div class="wrapper">
 			<div class="global-box topic-box">
 				<ul>
 					<li th:each="subject:${subjects}">
@@ -38,15 +73,13 @@
 							生物芯片扫描仪
 						</div>
 						<div class="spe-pic">
-						<a th:href="@{'/subjects/'+${subject.id}}">
-							<img th:src="@{${subject.image}}" width="210" height="175"/>
-						</a>
-						</div> <div class="topic-detail dd" draggable="false" th:text="${subject.summary}"></div>
+							<a th:href="@{'/subjects/'+${subject.id}}"> <img th:src="@{${subject.image}}" width="210" height="175"/> </a>
+						</div>
+						<div class="topic-detail dd" draggable="false" th:text="${subject.summary}"></div>
 					</li>
 				</ul>
 			</div>
-			<div class="pagination">
-			</div>
+			<div class="pagination"></div>
 		</div>
 		<div class="footer">
 			© 1998 - 2015 SJ Inc. All Rights Reserved
