--- a/web/src/main/resources/templates/search/info/info.html
+++ b/web/src/main/resources/templates/search/info/info.html
@@ -1,44 +1,51 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head lang="en">
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <meta name="description" content=""/>
-  <title>行业要闻</title>
-  <link type="text/css" rel="stylesheet" th:href="@{/css/global.css}"/>
-  <script type="text/javascript" th:src="@{/js/jquery-min.js}"></script>
-  <script  th:src="@{/js/script.js}"></script>
-</head>
-<body>
-	<div th:include="head/head">Head</div>
-	<!-- header -->
-	<div class="wrapper">
-		<div class="mainwrapper clearfix">
-			<div class="mainpanel fr">
-				<div class="news-wrap">
-					<ul >
-						<li th:each="info:${informations}">
-							<h3><a class="ft16 gray-deeply" th:text="${info.title}" th:href="'/informations/'+${info.id}"></a></h3>
-							<div class="news-dtl">
-								<p th:text="${info.summary}">
-								</p>
-							</div>
-							<div class="news-global clearfix">
-								<div class="news-time fl">
-									<i th:text="${#dates.format(info.createdTime, 'yyyy-MM-dd HH-mm-ss')}"></i>发布
+	<head lang="en">
+		<meta charset="UTF-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<meta name="description" content=""/>
+		<title>行业要闻</title>
+		<link type="text/css" rel="stylesheet" th:href="@{/css/global.css}"/>
+		<script type="text/javascript" th:src="@{/js/jquery-min.js}"></script>
+		<script  th:src="@{/js/script.js}"></script>
+	</head>
+	<body>
+		<div th:include="head/head">
+			Head
+		</div>
+		<!-- header -->
+		<div class="wrapper">
+			<div class="mainwrapper clearfix">
+				<div class="mainpanel fr">
+					<div class="news-wrap">
+						<ul >
+							<li th:each="info:${informations}">
+								<h3><a class="ft16 gray-deeply" th:text="${info.title}" th:href="'/informations/'+${info.id}"></a></h3>
+								<div class="news-dtl">
+									<p th:text="${info.summary}"></p>
 								</div>
-							</div>
+								<div class="news-global clearfix">
+									<div class="news-time fl">
+										<i th:text="${#dates.format(info.createdTime, 'yyyy-MM-dd HH-mm-ss')}"></i>发布
+									</div>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="pagination">
+				<div class="l-pagination">
+					<ul th:each="i:${#numbers.sequence(viewpage.begin,viewpage.end)}">
+						<li th:class="${i-1==viewpage.current}?active">
+							<a th:href="@{${viewpage.href}(page=${i-1},size=12,__${viewpage.option}__,title=${option.title})}" th:text="${i}"></a>
 						</li>
 					</ul>
 				</div>
 			</div>
 		</div>
-		<div class="pagination">
-			
+		<div class="footer">
+			© 1998 - 2015 SJ Inc. All Rights Reserved
 		</div>
-	</div>
-	<div class="footer">
-		© 1998 - 2015 SJ Inc. All Rights Reserved
-	</div>
-</body>
-</html>	
+	</body>
+</html>
