--- a/web/src/main/resources/templates/search/subject/subjects.html
+++ b/web/src/main/resources/templates/search/subject/subjects.html
@@ -79,7 +79,15 @@
 					</li>
 				</ul>
 			</div>
-			<div class="pagination"></div>
+			<div class="pagination">
+				<div class="l-pagination">
+					<ul th:each="i:${#numbers.sequence(viewpage.begin,viewpage.end)}">
+						<li th:class="${i-1==viewpage.current}?active">
+							<a th:href="@{${viewpage.href}(page=${i-1},size=12,__${viewpage.option}__,title=${option.title})}" th:text="${i}"></a>
+						</li>
+					</ul>
+				</div>
+			</div>
 		</div>
 		<div class="footer">
 			© 1998 - 2015 SJ Inc. All Rights Reserved
