admin subject category feature

--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -31,6 +31,7 @@
     <script src="/js/module/solution.js"></script>
     <script src="/js/module/category.js"></script>
     <script src="/js/module/scrollImage.js"></script>
+    <script src="/js/module/subjectCategory.js"></script>
     <!--custom directive-->
     <script src="/js/module/uploadDirective.js"></script>
     <script src="/js/module/ckEditorDirective.js"></script>
