--- a/web/src/main/resources/templates/user/provider/signup.html
+++ b/web/src/main/resources/templates/user/provider/signup.html
@@ -24,6 +24,7 @@
         $(document).ajaxSend(function(e, xhr, options) {
             xhr.setRequestHeader(header, token);
         });
+        
         $('#province').change(function() {
             var obj = $(this);
             var id = obj.val();
@@ -96,7 +97,6 @@
             },
             progressall: function(e, data) {
             }
-            
         });
 
     });
@@ -243,7 +243,7 @@
             <div class="form-group files">
                 <label><i>*</i>企业营业执照上传</label>
                 <img th:src="*{businessLicenseUrl}" width="100" height="100" />
-                <span id="uploadImg">
+                <span id="uploadImg" type="button">
                 <input type='file' name='file' th:attr="data-url=@{businessLicenseUrl}"/>
                 <a href="#">选择文件</a>
                 </span>
