--- a/web/src/main/resources/templates/user/provider/maintain.html
+++ b/web/src/main/resources/templates/user/provider/maintain.html
@@ -54,7 +54,7 @@
 								<tbody>
 									<tr th:each="product:${lists.getContent()}" th:id="'tr'+${product.id}" th:switch="${product.status.toString()}" >
 										<td th:text="${#dates.format(product.createdTime, 'yyyy-MM-dd')}">2015年01月11日</td>
-										<td><a th:text="${product.name}" th:href="'/products/'+${product.id}" target="view_window">名称名称</a></td>
+										<td><a th:text="${product.name}" th:href="@{/provider/products/__${product.id}__?detail}" target="view_window">名称名称</a></td>
 										<td>
 											<span class="one-sort" th:text="${#strings.abbreviate(product.firstCategory.name,15)}">仪器</span>
 											<span th:text="${#strings.abbreviate(product.secondCategory.name,15)}">生物芯片</span>
