info confirm feature

--- a/admin/src/main/resources/templates/information/info.html
+++ b/admin/src/main/resources/templates/information/info.html
@@ -39,4 +39,16 @@
     <div class="pagenumQu">
         <pagination total-items="total" items-per-page="15" max-size="7" ng-model="page" ng-change="search()"></pagination>
     </div>
+    <script type="text/ng-template" id="infoModal.html">
+        <div class="modal-header">
+            冻结/解冻
+        </div>
+        <div class="modal-body">
+        	{{item.name}}
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-primary" ng-click="ok()">OK</button>
+            <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+        </div>
+    </script>
 </div>
