--- a/web/src/main/resources/static/css/global.css
+++ b/web/src/main/resources/static/css/global.css
@@ -373,6 +373,9 @@ img{
 .head-user .user-menu li:hover{
 	color: #27bff8;
 }
+.hide-menu:hover .show-menu{
+	display:block;
+}
 /** footer **/
 .footer{
 	width: 100%;
