--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -248,6 +248,8 @@
 				 </p>
 			</div>
 			<div class="foot-ft">
+				<a><img src="" width="150" height="50" /></a>
+				<a><img src="" width="150" height="50" /></a>
 			</div>
 		</div>
 	</body>
