给前端页面添加底部

--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -219,38 +219,6 @@
 				</div>
 			</div>
 		</div>
-		
-		<div class="footer">
-			<div class="foot-hd">
-				<p>
-					<a href="">关于我们</a> 
-					| <a href="">产品大全</a>  
-					| <a href="">资料下载</a> 
-					| <a href="">营销服务</a> 
-					| <a href="">联系我们</a> 
-					| <a href="">加入我们</a> 
-					| <a href="">友情链接</a> 
-					| <a href="">沪ICP备14018915号-1</a>
-				</p>
-			</div>
-			<div class="foot-bd">
-				<p>
-					旗下网站：<a href="">生物谷</a> |
-					 <a href="">生物在线</a> |
-					 <a href="">制药在线</a> |
-					 <a href="">医药生物人才网</a> |
-					 <a href="">医药生物汇展网</a> |
-					 <a href="">生命科学论坛</a> |
-					 <a href="">BioInsight</a>		
-				 </p>
-				 <p>
-				 	© 1998 - 2015 SJ Inc. All Rights Reserved版权所有 不得转载. 著作权声明 | 法律声明 
-				 </p>
-			</div>
-			<div class="foot-ft">
-				<a><img src="" width="150" height="50" /></a>
-				<a><img src="" width="150" height="50" /></a>
-			</div>
-		</div>
+		<div th:include="footer/footer"></div>
 	</body>
 </html>
