--- a/web/src/main/resources/templates/user/common/createBuy.html
+++ b/web/src/main/resources/templates/user/common/createBuy.html
@@ -109,8 +109,8 @@
 			</div>
 		</div>
 	</div>
-	<div class="footer">© 1998 - 2015 SJ Inc. All Rights Reserved</div>
-		<script th:src="@{/js/bootstrap-datetimepicker.min.js}"></script>
+	<div th:include="footer/footer"></div>
+	<script th:src="@{/js/bootstrap-datetimepicker.min.js}"></script>
 	<script type="text/javascript">
 		(function($){
 		$.fn.datetimepicker.dates['zh-CN'] = {
