--- a/web/src/main/resources/templates/product/product.html
+++ b/web/src/main/resources/templates/product/product.html
@@ -261,7 +261,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="footer">© 1998 - 2015 SJ Inc. All Rights Reserved</div>
+	<div th:include="footer/footer"></div>
 	<script></script>
 	<div class="fixed"></div>
 	<div class="hide-wrap logo-small bodr"></div>
