--- a/web/src/main/resources/templates/search/products.html
+++ b/web/src/main/resources/templates/search/products.html
@@ -199,9 +199,7 @@
 		</div>
 			
 		</div>
-		<div class="footer">
-			© 1998 - 2015 SJ Inc. All Rights Reserved
-		</div>
+		<div th:include="footer/footer"></div>
 		<div class="fixed"></div>
 		<div class="hide-wrap logo-small bodr"></div>
 	</body>
