--- a/web/src/main/resources/templates/user/common/cart.html
+++ b/web/src/main/resources/templates/user/common/cart.html
@@ -106,9 +106,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="footer">
-		© 1998 - 2015 SJ Inc. All Rights Reserved
-	</div>
+<div th:include="footer/footer"></div>
 	<div class="fixed"></div>
 	<div class="hide-wrap temp-wrap bodr">
 		<span class="cancel">关闭</span>
