--- a/web/src/main/resources/templates/user/common/changePassword.html
+++ b/web/src/main/resources/templates/user/common/changePassword.html
@@ -60,7 +60,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="footer">© 1998 - 2015 SJ Inc. All Rights Reserved</div>
+		<div th:include="footer/footer"></div>
 	</div>
 </body>
 </html>
