--- a/web/src/main/resources/templates/user/common/modifyBuy.html
+++ b/web/src/main/resources/templates/user/common/modifyBuy.html
@@ -114,7 +114,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="footer">© 1998 - 2015 SJ Inc. All Rights Reserved</div>
+	<div th:include="footer/footer"></div>
 	<script th:src="@{/js/bootstrap-datetimepicker.min.js}"></script>
 	<script type="text/javascript">
 		(function($){
