--- a/web/src/main/resources/templates/user/provider/maintain.html
+++ b/web/src/main/resources/templates/user/provider/maintain.html
@@ -85,10 +85,7 @@
 			</div>
 		</div>
 	</div>
-
-	<div class="footer">
-		© 1998 - 2015 SJ Inc. All Rights Reserved
-	</div>
+<div th:include="footer/footer"></div>
 	<div class="fixed"></div>
 	<div class="hide-wrap bodr" id="down">
 		<div class="hide-con">
